{{$NEXT}}

2.03    2016-09-17

- Bump minimum required Perl to 5.8.4 from 5.8.1. This matches DateTime.pm
  itself.


2.02    2016-09-16

- Replaced Params::Validate with Params::ValidationCompiler.


2.01    2016-07-17

- This release is based on version 2016f of the Olson database. This release
  includes contemporary changes for Egypt and Russia. The changes for Egypt
  supersede the ones in 2016e.


2.00    2016-06-07

- The fix in 1.99 broke the parsing of the etcetera zones, which are specified
  as 1 or 2 digit offsets in hours, unlike all other zones which are written
  as "1:00" or "-2:00".


1.99    2016-06-07

- When parsing the POSIX zones in the etcetera file, don't special case the
  ETC[+-]NN zones. These are weirdly named, as ETC+8 is 8 hours _behind_ UTC,
  and -6 is 6 hours _ahead_. Previously, we were swapping these so the name
  matched the sane usage, but this is confusing for anyone who is explicitly
  trying to use the POSIX names, expecting the bizarre (but POSIXly correct)
  interpretation. Patch by Bron Gondwana. GitHub PR #7.


1.98    2016-04-18

- This release is based on version 2016d of the Olson database. This release
  includes contemporary changes for Russia and Venezuela.


1.97    2016-03-23

- This release is based on version 2016c of the Olson database. This release
  includes contemporary changes for Azerbaijan and Chile.


1.96    2016-03-15

- This release is based on version 2016b of the Olson database. This release
  includes contemporary changes for Russia, Haiti, and Palestine.


1.95    2016-01-27

- This release is based on version 2016a of the Olson database. This release
  includes contemporary changes for the Cayman Islands, Iran, and Chita,
  Russia.


1.94    2015-10-21

- This release is based on version 2015g of the Olson database. This release
  includes contemporary changes for Turkey, Norfolk, Fiji, and Fort Nelson.


1.93    2015-08-11
