@@ -13,7 +13,7 @@ exclude_match = ^t/zd.*
 
 [PruneCruft]
 
-[@DROLSKY]
+[=inc::DTTZBundle]
 dist = DateTime-TimeZone
 next_release_width = 7
 prereqs_skip = DateTime
@@ -35,6 +35,8 @@ Test::Compile.xt_mode = 1
 -remove = Test::Pod::No404s
 -remove = Test::Synopsis
 
+; authordep Dist::Zilla::PluginBundle::DROLSKY = 0.72
+; authordep MetaCPAN::Client
 [Prereqs / DevelopRequires]
 autodie = 0
 DateTime = 0
@@ -49,6 +51,3 @@ Parallel::ForkManager = 0
 Path::Class = 0
 Test::Output = 0
 Test::Taint = 0
-
-[OSPrereqs / MSWin32]
-DateTime::TimeZone::Local::Win32 = 1.83
